hphp/test/zend/good/tests/lang/bug21820.php
<?php

error_reporting(E_ALL);

$arr = array('foo' => 'bar');
echo "$arr['foo']";

?>
