hphp/test/zend/bad/ext/zlib/tests/bug51269.php
<?php
$_ENV[HTTP_ACCEPT_ENCODING] = gzip;

header('Vary: Cookie');
echo 'foo';
?>